PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2009, PHP 5.3.0 Alpha 4
- Upgraded bundled sqlite to version 3.6.10. (Scott, Ilia)

- Deprecated session_register(), session_unregister() and
  session_is_registered(). (Hannes)

- Improved DNS API
 . Added Windows support for dns_check_record(), dns_get_mx(), checkdnsrr() and
   getmxrr(). (Pierre)
 . Added support for old style DNS functions (supports OSX and FBSD). (Scott)
 . Added a new "entries" array in dns_check_record() containing the TXT
   elements. (Felipe, Pierre)

- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)
- Changed dl() to be disabled by default. Enabled only when explicitly
  registered by the SAPI. Currently enabled with cli, cgi and embed SAPIs.
  (Dmitry)
- Changed opendir(), dir() and scandir() to use default context when no context
  argument is passed. (Sara)
- Changed open_basedir to allow tightening in runtime contexts. (Sara)
- Changed PHP/Zend extensions to use flexible build IDs. (Stas)

- Added support for IDN via ICU in intl, idn_to_ascii and idn_to_utf8. (Pierre)
- Added support for SSH via libssh2 in cURL. (Pierre)
- Added support for fnmatch() on Windows. (Pierre)
- Added support for time_nanosleep() and time_sleep_until() on Windows.
  (Pierre)
- Added support for symlink(), readlink(), linkinfo() and link() on Windows.
  They are available only when the running platform supports them. (Pierre)
- Added support for gray levels PNG image with alpha in GD extension. (Pierre)
- Added support for salsa hashing functions in HASH extension. (Scott)
- Added DOMNode::getLineNo to get line number of parsed node. (Rob)
- Added table info to PDO::getColumnMeta() with SQLite. (Martin Jansen, Scott)
- Added mail logging functionality that allows logging of mail sent via
  mail() function. (Ilia)