@@ -5,6 +5,10 @@ PHP_ARG_ENABLE(phar, for phar archive support,
 [  --disable-phar          Disable phar support], yes)
 
 if test "$PHP_PHAR" != "no"; then
+  PHP_C_BIGENDIAN
+  if test $ac_cv_c_bigendian_php = yes; then
+    AC_MSG_WARN([Disabling Phar due to crash bugs on big endian systems])
+  else
   PHP_NEW_EXTENSION(phar, util.c tar.c zip.c stream.c func_interceptors.c dirstream.c phar.c phar_object.c phar_path_check.c, $ext_shared)
   AC_MSG_CHECKING([for phar openssl support])
   if test "$PHP_HASH_SHARED" != "yes"; then
@@ -27,4 +31,5 @@ if test "$PHP_PHAR" != "no"; then
   PHP_ADD_EXTENSION_DEP(phar, hash, true)
   PHP_ADD_EXTENSION_DEP(phar, spl, true)
   PHP_ADD_MAKEFILE_FRAGMENT
+  fi
 fi
